# OpenCVViewerForDVI2USB3_OSX

./: CMakeLists.txt  openCVViewerForDVI2USB3.cxx
libs/: libz.1.2.5.dylib
